--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -19,7 +19,7 @@ jobs:
           extensions: mbstring, intl, bcmath, pdo_sqlite, dom, curl, fileinfo, json
           coverage: none
         
-      - name: Instalar composer 2 y dependencias
+      - name: Install composer dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
       - name: Copiar .env
